# drf-api-permissions-postgres

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
cars/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
cars/migrations/: 0001_initial.py
vehicles/: asgi.py  settings.py  urls.py  wsgi.py
